@@ -5,11 +5,11 @@ import com.paypal.kyc.model.KYCUserDocumentFlagsNotificationBodyModel;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
 import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Optional;
+import java.util.Collections;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -21,16 +21,16 @@ class KYCUserDocumentFlagsExecutorTest {
 	private KYCUserDocumentFlagsExecutor testObj;
 
 	@Mock
-	private Strategy<KYCUserDocumentFlagsNotificationBodyModel, Optional<Void>> strategyMock;
+	private Strategy<KYCUserDocumentFlagsNotificationBodyModel, Void> strategyMock;
 
 	@BeforeEach
 	void setUp() {
-		testObj = new KYCUserDocumentFlagsExecutor(Set.of(strategyMock));
+		testObj = new KYCUserDocumentFlagsExecutor(Collections.singleton(strategyMock));
 	}
 
 	@Test
 	void getStrategies_shouldReturnConverterStrategyMock() {
-		final var result = testObj.getStrategies();
+		final Set<Strategy<KYCUserDocumentFlagsNotificationBodyModel, Void>> result = testObj.getStrategies();
 
 		assertThat(result).containsExactly(strategyMock);
 	}
